# secretsanta

./: .gitlab-ci.yml  CMakeLists.txt
data/: lost.flac  music2.flac  net.dosowisko.SecretSanta.appdata.xml  secretsanta.desktop  start.flac
data/fonts/: README
data/icons/: icon.rc  secretsanta.icns
data/shaders/: circular_gradient.glsl  invert.glsl
flatpak/: net.dosowisko.SecretSanta.json
src/: common.c  main.c
src/gamestates/: dosowisko.c  empty.c  example.c  game.c
